fix layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 *,
 *::before,
 *::after {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -65,10 +66,12 @@ a {
 }
 
 * {
+  -webkit-transition: all ease 0.2s;
   transition: all ease 0.2s;
 }
 
 :root {
+  --bgColor: #fffcf8;
   --red: #fe7867;
   --yellow: #fad400;
   --blueText: #19536c;
@@ -86,6 +89,7 @@ a {
 }
 
 body {
+  background-color: var(--bgColor);
   font-family: var(--ff-secondary);
   text-align: center;
 }
@@ -95,6 +99,7 @@ h1 {
   font-size: clamp(2.5rem, 2.0455rem + 1.9394vw, 3.5rem);
   line-height: 1.23;
   letter-spacing: 0.15em;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -103,7 +108,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.7rem;
+  font-size: 1.75rem;
 }
 
 h4 {
@@ -167,6 +172,7 @@ p {
 .header__img {
   margin-top: 3.25rem;
   margin-inline: auto;
+  -webkit-animation: bounce 2s ease infinite;
   animation: bounce 2s ease infinite;
 }
 @media only screen and (min-width: 48rem) {
@@ -175,20 +181,43 @@ p {
   }
 }
 
-@keyframes bounce {
+@-webkit-keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
     transform: translateY(0);
   }
   40% {
+    -webkit-transform: translateY(-30px);
     transform: translateY(-30px);
   }
   60% {
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -webkit-transform: translateY(-15px);
     transform: translateY(-15px);
   }
 }
 .navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   margin-inline: auto;
   margin-bottom: 5.5rem;
@@ -223,7 +252,12 @@ p {
   right: -400px;
   z-index: 9999;
   display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 2rem;
   background-color: var(--white);
@@ -252,7 +286,12 @@ p {
 }
 @media only screen and (min-width: 48rem) {
   .navigation__links {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
     gap: 2.875rem;
     background-color: transparent;
@@ -276,6 +315,8 @@ p {
   width: 0;
   height: 2px;
   background: var(--yellow);
+  -webkit-transition: width 0.3s;
+  -o-transition: width 0.3s;
   transition: width 0.3s;
 }
 @media (hover: hover) {
@@ -297,6 +338,8 @@ p {
 @media only screen and (min-width: 48rem) {
   .navigation__btn {
     background-color: var(--white);
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
     transition: 0.3s;
   }
 }
@@ -309,6 +352,7 @@ p {
 
 .active {
   display: flex;
+  -webkit-animation: slideIn 0.5s 0.1s ease forwards;
   animation: slideIn 0.5s 0.1s ease forwards;
 }
 @media only screen and (min-width: 48rem) {
@@ -319,8 +363,8 @@ p {
 
 .overlay {
   display: none;
-  backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
   background-color: rgba(0, 0, 0, 0.3);
   position: fixed;
   top: 0;
@@ -333,6 +377,22 @@ p {
   z-index: 999;
 }
 
+@-webkit-keyframes slideIn {
+  0% {
+    opacity: 0;
+    right: -400px;
+  }
+  60% {
+    opacity: 1;
+    right: 2rem;
+  }
+  80% {
+    right: 1rem;
+  }
+  100% {
+    right: 1.5rem;
+  }
+}
 @keyframes slideIn {
   0% {
     opacity: 0;
@@ -372,11 +432,19 @@ p {
 .footer__gallery__images img {
   width: 100%;
   max-height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 .footer__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 2.5rem;
   padding: 4rem 2.5rem 5rem 2.5rem;
@@ -390,17 +458,24 @@ p {
 }
 .footer__content__logo {
   color: var(--cyanFooter);
+  height: 33px;
 }
 .footer__content__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   gap: 3.5rem;
 }
 .footer__content .socials {
   gap: 1.7rem;
+  margin-top: 3rem;
 }
 .footer__content__link {
   color: var(--cyanFooter);
+  line-height: 1.35;
 }
 .footer__content__link i {
   font-size: 1.25rem;
@@ -412,6 +487,8 @@ p {
 }
 @media (hover: hover) {
   .footer__content__link:hover i {
+    -webkit-transform: translateY(-3px);
+    -ms-transform: translateY(-3px);
     transform: translateY(-3px);
   }
 }
@@ -438,10 +515,16 @@ p {
     align-items: center;
     justify-content: end;
   }
+  .gallery-section .gallery .text-1 {
+    padding-left: 3.4375rem;
+  }
+  .gallery-section .gallery .text-2 {
+    padding-right: 3.4375rem;
+  }
 }
 @media only screen and (min-width: 90rem) {
   .gallery-section .gallery {
-    max-width: 1440px;
+    max-width: 90rem;
     margin-inline: auto;
   }
 }
@@ -449,6 +532,7 @@ p {
   width: 100%;
   height: 100%;
   max-height: 37.5rem;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 @media only screen and (min-width: 48rem) {
@@ -460,19 +544,25 @@ p {
   padding: 4rem 1.5rem;
   display: grid;
   gap: 1.5rem;
-  max-width: 27.75rem;
+  max-width: 31.25rem;
   margin-inline: auto;
+}
+.gallery-section .gallery__description p {
+  line-height: 1.67;
 }
 @media only screen and (min-width: 75rem) {
   .gallery-section .gallery__description {
     padding-inline: 0;
     text-align: left;
+    gap: 2rem;
   }
 }
 .gallery-section .gallery__description__link {
   color: var(--textDark);
   font-weight: 900;
   padding-inline: 0.5rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   position: relative;
   margin-inline: auto;
@@ -480,6 +570,7 @@ p {
 @media only screen and (min-width: 75rem) {
   .gallery-section .gallery__description__link {
     margin-inline: 0;
+    margin-top: 0.5rem;
   }
 }
 @media (hover: hover) {
@@ -498,6 +589,8 @@ p {
   mix-blend-mode: normal;
   opacity: 0.25;
   border-radius: 28px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
 }
 .gallery-section .gallery__description .link-1::after {
@@ -521,6 +614,7 @@ p {
 .gallery-section .gallery__box__images img {
   min-height: 600px;
   width: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 .gallery-section .gallery__box h3 {
@@ -581,9 +675,18 @@ p {
   }
 }
 .testimonial-section .testimonial__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   gap: 2rem;
   max-width: 25rem;
@@ -592,6 +695,9 @@ p {
 @media only screen and (min-width: 48rem) {
   .testimonial-section .testimonial__box {
     gap: 3.625rem;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     justify-content: space-between;
   }
 }
